[tool.poetry]
name = "nr-all"
version = "1.0.0a1"
description = "Czech National Repository index that store all records from all metadata models"
authors = ["Daniel Kopecký <Daniel.Kopecky@techlib.cz>"]

[tool.poetry.dependencies]
python = "^3.8"
nr-common = { git = "https://github.com/Narodni-repozitar/nr-common.git", branch = "master" }
nr-theses = { git = "https://github.com/Narodni-repozitar/nr-theses.git", branch = "master" }
nr-Nresults = { git = "https://github.com/Narodni-repozitar/nr-Nresults.git", branch = "master" }
nr-events = { git = "https://github.com/Narodni-repozitar/nr-events.git", branch = "master" }
oarepo = { version = "^3.3", optional = true }
pytest = { version = "^5.0.0", optional = true }
pytest-cov = { version = "^2.10.1", optional = true }

[tool.poetry.extras]
tests = ["oarepo", "pytest", "pytest-cov"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins."invenio_config.module"]
nr_all = "nr_all.config"

[tool.poetry.plugins."invenio_base.apps"]
nr_all = "nr_all.ext:NRAll"

[tool.poetry.plugins."invenio_base.api_apps"]
nr_all = "nr_all.ext:NRAll"

[tool.poetry.plugins."invenio_pidstore.minters"]
nr_all = 'nr_all.minters:nr_all_id_minter'

[tool.poetry.plugins."invenio_pidstore.fetchers"]
nr_all = 'nr_all.fetchers:nr_all_id_fetcher'
