[tool.poetry]
name = "nr-all"
version = "1.0.0a4"
description = "Czech National Repository index that store all records from all metadata models"
authors = ["Daniel Kopecký <Daniel.Kopecky@techlib.cz>"]

[tool.poetry.dependencies]
python = "^3.8"
nr-common = { git = "https://github.com/Narodni-repozitar/nr-common.git", branch = "master" }
nr-theses = { git = "https://github.com/Narodni-repozitar/nr-theses.git", branch = "master" }
nr-Nresults = { git = "https://github.com/Narodni-repozitar/nr-Nresults.git", branch = "master" }
nr-events = { git = "https://github.com/Narodni-repozitar/nr-events.git", branch = "master" }


[tool.poetry.dev-dependencies]
oarepo-multilingual = ">=2.4.3"
oarepo-ui = "^2.0.1"
oarepo = "^3.3"
pytest = "^5.0.0"
pytest-cov = "^2.10.1"


[tool.poetry.plugins."invenio_config.module"]
nr_all = "nr_all.config"


[tool.poetry.plugins."invenio_base.apps"]
nr_all = "nr_all.ext:NRAll"


[tool.poetry.plugins."invenio_base.api_apps"]
nr_all = "nr_all.ext:NRAll"


[tool.poetry.plugins."invenio_pidstore.minters"]
nr_all = 'nr_all.minters:nr_all_id_minter'


[tool.poetry.plugins."invenio_pidstore.fetchers"]
nr_all = 'nr_all.fetchers:nr_all_id_fetcher'


[tool.poetry.plugins."invenio_i18n.translations"]
nr_all = "nr_all"
